GearsetPOC/force-app/main/default/objects/B2b_AccountPCCCode__c/B2b_AccountPCCCode__c.object-meta.xml
<CustomObject>
    <description>Junction Object delivered to support New Corporate Offer Project May /June 2024</description>
    <label>Account PCC Code</label>
    <nameField>
        <displayFormat>APC- {000000}</displayFormat>
        <label>Account PCC Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account PCC Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>