GearsetPOC/force-app/main/default/objects/B2b_AccountPCCCode__c/fields/B2b_AccountPCC__c.field-meta.xml
<CustomField>
    <fullName>B2b_AccountPCC__c</fullName>
    <label>Account PCC</label>
    <referenceTo>B2b_AccountPCC__c</referenceTo>
    <relationshipLabel>Account PCC Codes</relationshipLabel>
    <relationshipName>Account_PCC_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>