GearsetPOC/force-app/main/default/objects/B2b_AccountPCCCode__c/fields/Corp_Tracking_Type_And_Code__c.field-meta.xml
<CustomField>
    <fullName>Corp_Tracking_Type_And_Code__c</fullName>
    <label>Corporate Code</label>
    <referenceTo>Corp_Tracking_Type_and_Code__c</referenceTo>
    <relationshipLabel>Account PCC Codes</relationshipLabel>
    <relationshipName>Account_PCC_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>