GearsetPOC/force-app/main/default/objects/B2b_AccountPCCCode__c/fields/Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Code__c</fullName>
    <formula>Corp_Tracking_Type_And_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Code Name</label>
    <type>Text</type>
</CustomField>