GearsetPOC/force-app/main/default/objects/B2b_AccountPCCCode__c/fields/PCC_Name__c.field-meta.xml
<CustomField>
    <fullName>PCC_Name__c</fullName>
    <formula>B2b_AccountPCC__r.B2b_OfficeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCC Name</label>
    <type>Text</type>
</CustomField>